--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -40197,15 +40197,15 @@
    "source": [
     "top_5_featured_playlists = sp.featured_playlists(locale='es',limit=5)\n",
     "print('The top 5 featured playlists:')\n",
-    "for playlist in top_5_featured_playlists:\n",
+    "for playlist in top_5_featured_playlists['items']:\n",
     "    print(f'Id: {playlist['id']}')\n",
     "    print(f'Name: {playlist['name']}')\n",
     "\n",
-    "playlist_chosen = top_5_featured_playlists[0]\n",
+    "playlist_chosen = top_5_featured_playlists['items'][0]\n",
     "print('Deep dive:')\n",
     "print(f'Name: {playlist_chosen['name']}')\n",
     "print(f'Description: {playlist_chosen['description']}')\n",
-    "print(f'Total track count: {playlist_chosen['tracks']['items'].length}')\n",
+    "print(f'Total track count: {len(playlist_chosen['tracks']['items'])}')\n",
     "\n",
     "print('The track-tastic contains:')\n",
     "for i in range(10):\n",
