--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -40201,21 +40201,26 @@
     "    print(f'Id: {playlist['id']}')\n",
     "    print(f'Name: {playlist['name']}')\n",
     "\n",
-    "playlist_chosen = top_5_featured_playlists['items'][0]\n",
+    "chosen_playlist_id = top_5_featured_playlists['items'][0]['id']\n",
+    "playlist_details = sp.playlist(chosen_playlist_id)\n",
     "print('Deep dive:')\n",
-    "print(f'Name: {playlist_chosen['name']}')\n",
-    "print(f'Description: {playlist_chosen['description']}')\n",
-    "print(f'Total track count: {len(playlist_chosen['tracks']['items'])}')\n",
+    "print(f'Name: {playlist_details['name']}')\n",
+    "print(f'Description: {playlist_details['description']}')\n",
+    "print(f'Total track count: {len(playlist_details['tracks']['items'])}')\n",
     "\n",
     "print('The track-tastic contains:')\n",
-    "for i in range(10):\n",
-    "    print(playlist_chosen['tracks']['items'][i]['name'])\n",
+    "tracks = sp.playlist_tracks(chosen_playlist_id, limit=10)\n",
+    "for track in track['items']:\n",
+    "    print(track['track']['name'])\n",
     "\n",
     "artistic_flair = {}\n",
-    "for i in range(10):\n",
-    "    clave = playlist_chosen['tracks']['items'][i]['track']['name'] \n",
-    "    valor = playlist_chosen['tracks']['items'][i]['artists']\n",
-    "    artistic_flair[clave] = valor\n",
+    "for track_item in track['items']:\n",
+    "    track_name = track_item['track']['name'] \n",
+    "    artistas = track_item['track']['artists']\n",
+    "    valor = []\n",
+    "    for artista in artistas:\n",
+    "        valor.append(artista['name'])\n",
+    "    artistic_flair[track_name] = valor\n",
     "\n",
     "\n"
    ]
