Fix errores finales

--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -40197,7 +40197,7 @@
    "source": [
     "top_5_featured_playlists = sp.featured_playlists(locale='es',limit=5)\n",
     "print('The top 5 featured playlists:')\n",
-    "for playlist in top_5_featured_playlists['items']:\n",
+    "for playlist in top_5_featured_playlists['playlists']['items']:\n",
     "    print(f'Id: {playlist['id']}')\n",
     "    print(f'Name: {playlist['name']}')\n",
     "\n",
@@ -40210,11 +40210,11 @@
     "\n",
     "print('The track-tastic contains:')\n",
     "tracks = sp.playlist_tracks(chosen_playlist_id, limit=10)\n",
-    "for track in track['items']:\n",
-    "    print(track['track']['name'])\n",
+    "for track_item in tracks['items']:\n",
+    "    print(track_item['track']['name'])\n",
     "\n",
     "artistic_flair = {}\n",
-    "for track_item in track['items']:\n",
+    "for track_item in tracks['items']:\n",
     "    track_name = track_item['track']['name'] \n",
     "    artistas = track_item['track']['artists']\n",
     "    valor = []\n",
