--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -40201,12 +40201,12 @@
     "    print(f'Id: {playlist['id']}')\n",
     "    print(f'Name: {playlist['name']}')\n",
     "\n",
-    "chosen_playlist_id = top_5_featured_playlists['items'][0]['id']\n",
+    "chosen_playlist_id = top_5_featured_playlists['playlists']['items'][0]['id']\n",
     "playlist_details = sp.playlist(chosen_playlist_id)\n",
     "print('Deep dive:')\n",
     "print(f'Name: {playlist_details['name']}')\n",
     "print(f'Description: {playlist_details['description']}')\n",
-    "print(f'Total track count: {len(playlist_details['tracks']['items'])}')\n",
+    "print(f'Total track count: {playlist_details['tracks']['total']}')\n",
     "\n",
     "print('The track-tastic contains:')\n",
     "tracks = sp.playlist_tracks(chosen_playlist_id, limit=10)\n",
