Fix Eliminando claves y agregando variables de entorno

--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -39993,9 +39993,13 @@
    "source": [
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "CLIENT_ID = \"cf6d9533f9da4a92907862212eecad4b\"\n",
-    "CLIENT_SECRET = \"66c7b6069ba14155a2ad719808e23e94\"\n",
+    "load_dotenv()  # Carga las variables del archivo .env\n",
+    "\n",
+    "CLIENT_ID = os.getenv(\"CLIENT_ID\")\n",
+    "CLIENT_SECRET = os.getenv(\"CLIENT_SECRET\")\n",
     "\n",
     "#Initialize SpotiPy with user credentials\n",
     "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(client_id=CLIENT_ID,\n",
